deps: cherry-pick c736883 from upstream V8
Original commit message:

    Optionally use halfsiphash for integer hashing.

    Change-Id: Ibd14f7b3fe78635675c76ae864112e3a3a7bc701
    Reviewed-on: https://chromium-review.googlesource.com/c/1382463
    Commit-Queue: Yang Guo <yangguo@chromium.org>
    Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
    Cr-Commit-Position: refs/heads/master@{#58674}

Refs: https://github.com/v8/v8/commit/c736883ed4e3ff92d1fd5a60497cec5311df9a25

--- a/deps/v8/BUILD.gn
+++ b/deps/v8/BUILD.gn
@@ -116,6 +116,9 @@ declare_args() {
   # tools/gen-postmortem-metadata.py for details.
   v8_postmortem_support = false
 
+  # Use Siphash as added protection against hash flooding attacks.
+  v8_use_siphash = false
+
   # Switches off inlining in V8.
   v8_no_inline = false
 
@@ -389,6 +392,9 @@ config("features") {
   }
   if (v8_use_multi_snapshots) {
     defines += [ "V8_MULTI_SNAPSHOTS" ]
+  }
+  if (v8_use_siphash) {
+    defines += [ "V8_USE_SIPHASH" ]
   }
 }
 
@@ -2502,6 +2508,8 @@ v8_source_set("v8_base") {
     "src/string-stream.h",
     "src/strtod.cc",
     "src/strtod.h",
+    "src/third_party/siphash/halfsiphash.cc",
+    "src/third_party/siphash/halfsiphash.h",
     "src/third_party/utf8-decoder/utf8-decoder.h",
     "src/torque-assembler.h",
     "src/tracing/trace-event.cc",
