--- a/deps/v8/BUILD.gn
+++ b/deps/v8/BUILD.gn
@@ -1589,6 +1589,8 @@ v8_source_set("v8_base") {
     "src/ast/scopes-inl.h",
     "src/ast/scopes.cc",
     "src/ast/scopes.h",
+    "src/ast/source-range-ast-visitor.cc",
+    "src/ast/source-range-ast-visitor.h",
     "src/ast/variables.cc",
     "src/ast/variables.h",
     "src/bailout-reason.cc",
