tools: apply stricter linting to tools directory
Enable ESLint rules for trailing commas and arrow callbacks in tools
directory. These rules are also in place in the benchmark directory.

PR-URL: https://github.com/nodejs/node/pull/26394
Reviewed-By: Richard Lau <riclau@uk.ibm.com>
Reviewed-By: Anto Aravinth <anto.aravinth.cse@gmail.com>
Reviewed-By: Masashi Hirano <shisama07@gmail.com>
Reviewed-By: James M Snell <jasnell@gmail.com>
Reviewed-By: Ruben Bridgewater <ruben@bridgewater.de>

--- a/tools/.eslintrc.yaml
+++ b/tools/.eslintrc.yaml
@@ -1,4 +1,9 @@
 rules:
-  # Variables
-  # http://eslint.org/docs/rules/#variables
+  comma-dangle:
+    - error
+    - arrays: 'always-multiline'
+      objects: 'only-multiline'
+      imports: 'only-multiline'
+      exports: 'only-multiline'
   no-unused-vars: [error, { args: 'after-used' }]
+  prefer-arrow-callback: error
