--- a/tools/node-lint-md-cli-rollup/package.json
+++ b/tools/node-lint-md-cli-rollup/package.json
@@ -1,21 +1,21 @@
 {
   "name": "node-lint-md-cli-rollup",
   "description": "remark packaged for node markdown linting",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "devDependencies": {
-    "@zeit/ncc": "^0.2.0"
+    "@zeit/ncc": "^0.15.2"
   },
   "dependencies": {
-    "markdown-extensions": "^1.1.0",
-    "remark": "^10.0.0",
-    "remark-lint": "^6.0.3",
+    "markdown-extensions": "^1.1.1",
+    "remark": "^10.0.1",
+    "remark-lint": "^6.0.4",
     "remark-preset-lint-node": "^1.4.0",
     "unified-args": "^6.0.0",
     "unified-engine": "^5.1.0"
   },
   "main": "src/cli-entry.js",
   "scripts": {
-    "build": "ncc build",
+    "build": "ncc build -m",
     "build-node": "npm run build && cp dist/index.js ../lint-md.js"
   }
 }
