tools: add no-var lint rule for tools directory
PR-URL: https://github.com/nodejs/node/pull/26398
Reviewed-By: Richard Lau <riclau@uk.ibm.com>
Reviewed-By: Colin Ihrig <cjihrig@gmail.com>
Reviewed-By: Refael Ackermann <refack@gmail.com>
Reviewed-By: Сковорода Никита Андреевич <chalkerx@gmail.com>
Reviewed-By: Ruben Bridgewater <ruben@bridgewater.de>

--- a/tools/.eslintrc.yaml
+++ b/tools/.eslintrc.yaml
@@ -7,3 +7,4 @@ rules:
       exports: 'only-multiline'
   no-unused-vars: [error, { args: 'after-used' }]
   prefer-arrow-callback: error
+  no-var: error
