--- a/lib/.eslintrc.yaml
+++ b/lib/.eslintrc.yaml
@@ -15,6 +15,8 @@ rules:
     # Config specific to lib
     - selector: "NewExpression[callee.name=/Error$/]:not([callee.name=/^(AssertionError|NghttpError)$/])"
       message: "Use an error exported by the internal/errors module."
+    - selector: "CallExpression[callee.object.name='Error'][callee.property.name='captureStackTrace']"
+      message: "Please use `require('internal/errors').hideStackFrames()` instead."
   # Custom rules in tools/eslint-rules
   node-core/require-globals: error
   node-core/no-let-in-for-declaration: error
