build: restore running tests on Travis
Restore running tests on Travis once the ccache is populated.

PR-URL: https://github.com/nodejs/node/pull/26720
Reviewed-By: Anna Henningsen <anna@addaleax.net>
Reviewed-By: Luigi Pinca <luigipinca@gmail.com>
Reviewed-By: Michaël Zasso <targos@protonmail.com>
Reviewed-By: Refael Ackermann <refack@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ matrix:
         - ./configure
         - make -j2 V=
       script:
-        - # PARALLEL_ARGS='--flaky-tests=skip' make -j1 test
+        - PARALLEL_ARGS='--flaky-tests=skip' make -j1 test
